Fix visibility of selection in multiple choice filters.

--- a/style/pme-table.scss
+++ b/style/pme-table.scss
@@ -4,7 +4,7 @@
  * CAFEVDB -- Camerata Academica Freiburg e.V. DataBase.
  *
  * @author Claus-Justus Heine
- * @copyright 2011-2016, 2020, 2021, 2022 Claus-Justus Heine <himself@claus-justus-heine.de>
+ * @copyright 2011-2016, 2020, 2021, 2022, 2023 Claus-Justus Heine <himself@claus-justus-heine.de>
  * @license AGPL-3.0-or-later
  *
  * This program is free software: you can redistribute it and/or modify
@@ -1168,7 +1168,8 @@ table.pme-main {
       background-color: var(--color-main-background);
       color: var(--color-main-text);
       border: 2px solid var(--color-border-maxcontrast);
-      height: 36px;
+      min-height: 36px;
+      height: fit-content;
       outline: none;
       border-radius: var(--border-radius-large);
       text-overflow: ellipsis;
@@ -1179,7 +1180,7 @@ table.pme-main {
         }
       }
       .chosen-search-input {
-        margin: -1px;
+        margin: -2px;
       }
     }
     .chosen-drop {
